tests/correctness/reject/refinement_construct_negative.keel
derive (Eq)
struct Acct:
    balance: int where >= 0

def main(sys: System); Io:
    a = Acct(-10)
    println(a.balance)
